# super_floppy

./: .gitignore  Cargo.toml  build_wasm.sh
src/: lib.rs  main.rs  solver.rs
ui/: index.html  main.js  package-lock.json  package.json  style.css
ui/public/: comlink-worker.js  super_floppy.js  super_floppy_bg.wasm
ui/src/: renderer.js  worker.js
