[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "*"
serde = { version = "1.0", features = ["derive"] }
rand = "*"
# wasm stuff
wasm-bindgen = "0.2.95"
js-sys="0.3"
